Adjust surefire args for Java 8 and 9