@@ -17,22 +17,6 @@
 	<url>https://github.com/MarceloLeite2064/libraries</url>
 	<description>A series of useful classes and methods which helps on minor tasks.</description>
 
-	<properties>
-		<surefire.argLine.default>-Djdk.attach.allowAttachSelf=true -noverify</surefire.argLine.default>
-		<surefire.argLine>${surefire.argLine.default}</surefire.argLine>
-	</properties>
-
-	<profiles>
-		<profile>
-			<id>java-9</id>
-			<properties>
-				<surefire.argLine>${surefire.argLine.default}
-					--illegal-access=permit --add-opens
-					java.base/jdk.internal.loader=ALL-UNNAMED</surefire.argLine>
-			</properties>
-		</profile>
-	</profiles>
-
 	<dependencies>
 
 		<dependency>
